--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.03.2022 10:36:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.03.2022 11:11:44</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -164,7 +164,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Slavky na cervenem vine po portugalsku s chorizem, cizrnou, rajcaty a zeleninou 139</li><li>Peceny filet z cerstveho norskeho lososa tresky s pecenymi cherry rajcaty a jogurtovym dipem, korenena ryze s cockou, salatek 169</li><li>Goanska korma s veprovym masem, bataty, ananasem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Grilovany hovezi pavoucek {spider steak} s restovanymi zampiony na cibulce, stouchane brambory s porkem, salatek 175</li><li>Burrito s fazolovym chilli s pecenymi paprikami a chipotle, jasminova ryze, salatek {L} 139 </li></ol>
+<ol><li>Slavky na cervenem vine po portugalsku s chorizem, cizrnou, rajcaty a zeleninou 139 K (nelze do vratneho boxu)</li><li>Peceny filet z cerstveho norskeho lososa tresky s pecenymi cherry rajcaty a jogurtovym dipem, korenena ryze s cockou, salatek 169</li><li>Goanska korma s veprovym masem, bataty, ananasem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Grilovany hovezi pavoucek {spider steak} s restovanymi zampiony na cibulce, stouchane brambory s porkem, salatek 175</li><li>Burrito s fazolovym chilli s pecenymi paprikami a chipotle, jasminova ryze, salatek {L} 139 </li></ol>
 </td>
 </tr>
 </table>
