Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.03.2022 08:34:35</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.03.2022 09:14:00</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -65,6 +65,11 @@
 <li class="poznamka">
 <div class="polozka">Pařížský dort s bílou čokoládou</div>
 <div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Arašídový cheesecake s čokoládou</div>
+<div class="cena">55 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
@@ -172,7 +177,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Slavky na cervenem vine po portugalsku s chorizem, cizrnou, rajcaty a zeleninou 139 K (nelze do vratneho boxu)</li><li>Peceny filet z cerstveho norskeho lososa tresky s pecenymi cherry rajcaty a jogurtovym dipem, korenena ryze s cockou, salatek 169</li><li>Goanska korma s veprovym masem, bataty, ananasem, orisky a kokosovym mlekem, jasminova ryze 139</li><li>Grilovany hovezi pavoucek {spider steak} s restovanymi zampiony na cibulce, stouchane brambory s porkem, salatek 175</li><li>Burrito s fazolovym chilli s pecenymi paprikami a chipotle, jasminova ryze, salatek {L} 139 </li></ol>
+<ol><li>Peceny filet z makrely s relisem z cerstvych okurek a celozrnne horcice, bramborovy salat s bilou redkvi, cibulkou, bylinkami a creme fraiche 139</li><li>Spagety s cerstvymi kalamary, rukolou, susenymi rajcaty a petrzelkovym pesrem s ancovickami {L} 169</li><li>Japonsky ramen s dusenym hovezim, sazenym vejcem, psenicnymi nudlemi a gaj coj v silnem hovezim vyvaru se zelenymi bylinkami {L} 139</li><li>Smazeny sekany teleci rizek s ementalem, petrzelkou a spetkou muskatu, bramborovy salat s bilou redkvi, cibulkou, bylinkami a creme fraiche, relis z cerstvych okurek s celozrnnou horcici {L} 169</li><li>Indicke zeleninove birjany z basmati ryze s cizrnovym kari s tofu a zazvorem, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
